37: [Import] Add inline CRS support for GeoJSON
Task-Url: http://github.com/Polymap4/polymap4-p4/issues/issue/37

  - clean up and i18n

--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -4,12 +4,21 @@
 ## csv
 ImporterCsv_summary = CSV: {0}
 
-ImporterExcel_Summary      = Excel file: {0}
-ImporterExcel_SummarySheet = Excel file: {0} [ {1} ]
 ##excel
+ImporterExcel_summary      = Excel file: {0}
+ImporterExcel_summarySheet = Excel file: {0} [ {1} ]
 ImporterExcel_sheet        = Sheet [ {0} ] with {1,number} lines
 ImporterExcel_sheets       = These Microsoft Excel file contains several work sheets. </br>Please select your work sheet to import them.
 
+## geojson
+ImporterGeoJSON_summary     = GeoJSON file: {0}
+ImporterGeoJSON_description = GeoJSON is a format for encoding a variety of geographic data structures.
+
+## KML
+ImporterKML_summary     = KML file: {0}
+ImporterKML_description = Keyhole Markup Language (KML) is for expressing geographic annotation and visualization within Internet-based, two-dimensional maps.
+
+## shp
 ImporterShp_summary     = Shapefile: {0}
 ImporterShp_description = A Shapefile is a common file format which contains features of the same type.
 
@@ -40,7 +49,6 @@ ImporterPrompt_encodingDescription             = The encoding of the feature con
 ImporterPrompt_encodingSamples                 = Samples with special characters
 ImporterPrompt_encodingSummary                 = Encoding
 ImporterPrompt_encodingSamplesDescription      = If the following samples are looking good, the encoding seems to be correct. Otherwise select another encoding, press ok and check the preview.
-
 
 ## refine
 ImporterRefine_latLabel     = Y/Latitude
