#87: [GeoServer] WFS (http://github.com/Mapzone/mapzone/issues/issue/87)
First attempt to make a WFS importer.

  - TODO: build proper GetCapabilities URL
  - FIX: super small FeatureTable columns

--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -4,29 +4,33 @@
 ## csv
 ImporterCsv_summary = CSV: {0}
 
+ImporterExcel_sheet        = Sheet [ {0} ] with {1,number} lines
+ImporterExcel_sheets       = These Microsoft Excel file contains several work sheets. </br>Please select your work sheet to import them.
 ##excel
 ImporterExcel_summary      = Excel file: {0}
 ImporterExcel_summarySheet = Excel file: {0} [ {1} ]
-ImporterExcel_sheet        = Sheet [ {0} ] with {1,number} lines
-ImporterExcel_sheets       = These Microsoft Excel file contains several work sheets. </br>Please select your work sheet to import them.
 
+ImporterGeoJSON_description = GeoJSON is a format for encoding a variety of geographic data structures.
 ## geojson
 ImporterGeoJSON_summary     = GeoJSON file: {0}
-ImporterGeoJSON_description = GeoJSON is a format for encoding a variety of geographic data structures.
 
+ImporterKML_description = Keyhole Markup Language (KML) is for expressing geographic annotation and visualization within Internet-based, two-dimensional maps.
 ## KML
 ImporterKML_summary     = KML file: {0}
-ImporterKML_description = Keyhole Markup Language (KML) is for expressing geographic annotation and visualization within Internet-based, two-dimensional maps.
-
-## shp
-ImporterShp_summary     = Shapefile: {0}
-ImporterShp_description = A Shapefile is a common file format which contains features of the same type.
 
 ## prompts
 ImporterPrompt_coordinatesDescription          = If the file contains coordinates, please select the columns.
 ImporterPrompt_coordinatesNocolumns            = We could not find columns with numbers as base for the coordinates.
 ImporterPrompt_coordinatesSummary              = Coordinates
-ImporterPrompt_encodingDescription             = The file can contain different special characters. During upload, these characters could be broken. To fix it, please select an enoding if you see any errors.
+ImporterPrompt_crsDescription                  = The coordinate reference system for projecting the feature content. If unsure use EPSG:4326.
+ImporterPrompt_crsSummary                      = Coordinate reference system
+ImporterPrompt_encodingDescription             = The encoding of the feature content. If unsure use ISO-8859-1.
+ImporterPrompt_encodingSamples                 = Samples with special characters
+ImporterPrompt_encodingSamplesDescription      = If the following samples are looking good, the encoding seems to be correct. Otherwise select another encoding, press ok and check the preview.
+ImporterPrompt_encodingSummary                 = Encoding
+ImporterPrompt_filterAction                    = Search...
+ImporterPrompt_filterDescription               = Performs a Fulltext search in all known data.
+ImporterPrompt_filterSummary                   = Filter:
 ImporterPrompt_headlinesDescription            = How many lines contain the headline?
 ImporterPrompt_headlinesSummary                = Headlines
 ImporterPrompt_ignoreAfterHeadlineDescription  = How many lines could be dropped after the headline?
@@ -35,20 +39,10 @@ ImporterPrompt_ignoreBeforeHeadlineDescription = How many lines are before the h
 ImporterPrompt_ignoreBeforeHeadlineSummary     = Lines before or no headline
 ImporterPrompt_quoteCharacterDescription       = What is the character to mark long strings?
 ImporterPrompt_quoteCharacterSummary           = Quotecharacter
+ImporterPrompt_schemaDescription               = Each dataset has its own unique name in the local project.
+ImporterPrompt_schemaSummary                   = Name of the dataset 
 ImporterPrompt_separatorDescription            = What character is the cell separator?
 ImporterPrompt_separatorSummary                = Separator
-ImporterPrompt_crsSummary                      = Coordinate reference system
-ImporterPrompt_crsDescription                  = The coordinate reference system for projecting the feature content. If unsure use EPSG:4326.
-ImporterPrompt_schemaSummary                   = Name of the dataset 
-ImporterPrompt_schemaDescription               = Each dataset has its own unique name in the local project.
-ImporterPrompt_filterAction                    = Search...
-ImporterPrompt_filterDescription               = Performs a Fulltext search in all known data.
-ImporterPrompt_filterSummary                   = Filter:
-ImporterPrompt_encodingSummary                 = Content encoding
-ImporterPrompt_encodingDescription             = The encoding of the feature content. If unsure use ISO-8859-1.
-ImporterPrompt_encodingSamples                 = Samples with special characters
-ImporterPrompt_encodingSummary                 = Encoding
-ImporterPrompt_encodingSamplesDescription      = If the following samples are looking good, the encoding seems to be correct. Otherwise select another encoding, press ok and check the preview.
 
 ## refine
 ImporterRefine_latLabel     = Y/Latitude
@@ -56,10 +50,9 @@ ImporterRefine_lonLabel     = X/Longitude
 ImporterRefine_rows         = {0,number} lines
 ImporterRefine_rowsShrinked = The preview shows only the first {0,number} lines
 
-##
-SchemaNamePrompt_noName    = Please insert a name.
-SchemaNamePrompt_wrongName = This name always exists in your database. Please use another name.
-SchemaNamePrompt_rightName = This name is ok.
+ImporterShp_description = Common file format for spatial data.
+## shp
+ImporterShp_summary     = Shapefile: {0}
 
 ##
 OwsMetadata_address            = Address
@@ -77,6 +70,20 @@ OwsMetadata_phoneFacsimiles    = Fax
 OwsMetadata_phoneVoices        = Phone
 OwsMetadata_positionName       = Position
 OwsMetadata_postalCode         = Postal code
+
+##
+SchemaNamePrompt_noName    = Please insert a name.
+SchemaNamePrompt_rightName = This name is ok.
+SchemaNamePrompt_wrongName = This name always exists in your database. Please use another name.
+
+WFS_description = Delivers feature data from a remote server
+WFS_entryExists = Entry already exists in catalog: {0}
+WFS_exception   = Unable to initialize WFS: {0}
+WFS_infoAdded   = Data source has been added to the catalog of the project.\n\nChoose from catalog in order to create a new layer from it.
+WFS_layers      = Layers
+WFS_noUrl       = Please specify the **URL** of the WFS above.
+## WMS
+WFS_summary     = WFS - Web Feature Service (BETA!)
 
 WMS_description = Delivers map images over HTTP
 WMS_entryExists = Entry already exists in catalog: {0}
