--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
@@ -18,7 +18,7 @@ ImporterPrompt_headlinesDescription            = Falls mehrere Zeilen die Spalte
 ImporterPrompt_headlinesSummary                = Kopfzeilen
 ImporterPrompt_ignoreAfterHeadlineDescription  = Wieviele Zeilen k\u00F6nnen nach der Spalten\u00FCberschrift ignoriert werden?
 ImporterPrompt_ignoreAfterHeadlineSummary      = \u00DCberfl\u00FCssige Datenzeilen
-ImporterPrompt_ignoreBeforeHeadlineDescription = Wieviele Zeilen befinden sich \u00FCber den Spalten\u00FCberschriften? Falls die Überschrift fehlt, verwenden Sie -1 um eine Standardüberschrift zu erzeugen.
+ImporterPrompt_ignoreBeforeHeadlineDescription = Wieviele Zeilen befinden sich \u00FCber den Spalten\u00FCberschriften? Falls die \u00DCberschrift fehlt, verwenden Sie -1 um eine Standard\u00FCberschrift zu erzeugen.
 ImporterPrompt_ignoreBeforeHeadlineSummary     = keine oder Zeilen vor \u00DCberschriften 
 ImporterPrompt_quoteCharacterDescription       = Mit welchem Zeichen werden Zeichenketten begrenzt?
 ImporterPrompt_quoteCharacterSummary           = Textbegrenzer
@@ -30,6 +30,12 @@ ImporterRefine_latLabel     = Y/Hochwert/Breitengrad (Latitude)
 ImporterRefine_lonLabel     = X/Rechtswert/L\u00E4ngengrad (Longitude)
 ImporterRefine_rows         = {0,number} Zeilen
 ImporterRefine_rowsShrinked = Diese Vorschau zeigt nur die ersten {0,number} Zeilen
+
+WFS_description = Liefert Daten von einem anderen Server
+WFS_entryExists = Eintrag existiert bereits: {0}
+WFS_exception   = Fehler beim Initialisieren: {0}
+WFS_layers      = Ebenen
+WFS_noUrl       = Geben Sie eine **URL** an.
 
 WMS_description = Liefert Kartenbilder \u00FCber HTTP
 WMS_entryExists = Eintrag existiert bereits: {0}
