#87: [GeoServer] WFS (http://github.com/Mapzone/mapzone/issues/issue/87)
SchemNamePrompt: simplified and refined.

  - TODO: Feature/Type building is done with XXXImpl instead of XXXBuilder
  - TODO: KML does not seem to work (because of Feature/Type building?)
  - TODO: check other common prompts

--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -39,8 +39,6 @@ ImporterPrompt_ignoreBeforeHeadlineDescription = How many lines are before the h
 ImporterPrompt_ignoreBeforeHeadlineSummary     = Lines before or no headline
 ImporterPrompt_quoteCharacterDescription       = What is the character to mark long strings?
 ImporterPrompt_quoteCharacterSummary           = Quotecharacter
-ImporterPrompt_schemaDescription               = Each dataset has its own unique name in the local project.
-ImporterPrompt_schemaSummary                   = Name of the dataset 
 ImporterPrompt_separatorDescription            = What character is the cell separator?
 ImporterPrompt_separatorSummary                = Separator
 
@@ -71,10 +69,12 @@ OwsMetadata_phoneVoices        = Phone
 OwsMetadata_positionName       = Position
 OwsMetadata_postalCode         = Postal code
 
+SchemaNamePrompt_description = Unique name of this dataset in the local project.
 ##
-SchemaNamePrompt_noName    = Please insert a name.
-SchemaNamePrompt_rightName = This name is ok.
-SchemaNamePrompt_wrongName = This name always exists in your database. Please use another name.
+SchemaNamePrompt_noName      = Please insert a name.
+SchemaNamePrompt_rightName   = This name is ok.
+SchemaNamePrompt_summary     = Name of the dataset
+SchemaNamePrompt_wrongName   = This name already exists in your database.
 
 WFS_description = Delivers feature data from a remote server
 WFS_entryExists = Entry already exists in catalog: {0}
