--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
@@ -31,6 +31,12 @@ ImporterRefine_lonLabel     = X/Rechtswert/L\u00E4ngengrad (Longitude)
 ImporterRefine_rows         = {0,number} Zeilen
 ImporterRefine_rowsShrinked = Diese Vorschau zeigt nur die ersten {0,number} Zeilen
 
+SchemaNamePrompt_description = Eindeutiger Name des Datensatzes im Projekt.
+SchemaNamePrompt_noName      = Geben Sie einen Namen an
+SchemaNamePrompt_rightName   = OK
+SchemaNamePrompt_summary     = Name das Datensatzes
+SchemaNamePrompt_wrongName   = Dieses Name existiert bereits.
+
 WFS_description = Liefert Daten von einem anderen Server
 WFS_entryExists = Eintrag existiert bereits: {0}
 WFS_exception   = Fehler beim Initialisieren: {0}
