#108: Raster data (http://github.com/Polymap4/polymap4-p4/issues/issue/108)
Add raster support to P4.

--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -45,6 +45,10 @@ ImporterPrompt_quoteCharacterSummary           = Quotecharacter
 ImporterPrompt_separatorDescription            = What character is the cell separator?
 ImporterPrompt_separatorSummary                = Separator
 
+ImporterRaster_description = Grid coverage data.
+ImporterRaster_infoAdded   = Data source has been added to the catalog.\n\nChoose from **catalog** in order to create a new layer from it.
+ImporterRaster_summary     = Grid: {0}
+
 ## refine
 ImporterRefine_latLabel     = Y/Latitude
 ImporterRefine_lonLabel     = X/Longitude
@@ -82,7 +86,7 @@ SchemaNamePrompt_wrongName   = This name already exists in your database.
 WFS_description = Delivers feature data from a remote server
 WFS_entryExists = Entry already exists in catalog: {0}
 WFS_exception   = Unable to initialize WFS: {0}
-WFS_infoAdded   = Data source has been added to the catalog of the project.\n\nChoose from catalog in order to create a new layer from it.
+WFS_infoAdded   = Data source has been added to the catalog.\n\nChoose from **catalog** in order to create a new layer from it.
 WFS_layers      = Layers
 WFS_noUrl       = Please specify the **URL** of the WFS above.
 ## WMS
@@ -91,7 +95,7 @@ WFS_summary     = WFS - Web Feature Service (BETA!)
 WMS_description = Delivers map images over HTTP
 WMS_entryExists = Entry already exists in catalog: {0}
 WMS_exception   = Unable to initialize WMS: {0}
-WMS_infoAdded   = Data source has been added to the catalog of the project.\n\nChoose from catalog in order to create a new layer from it.
+WMS_infoAdded   = Data source has been added to the catalog.\n\nChoose from **catalog** in order to create a new layer from it.
 WMS_layers      = Layers
 WMS_noUrl       = Please specify the **URL** of the WMS above.
 ## WMS
