--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
@@ -31,6 +31,9 @@ ImporterPrompt_quoteCharacterSummary           = Textbegrenzer
 ImporterPrompt_separatorDescription            = Mit welchem Zeichen werden die einzelnen Textzellen voneinander getrennt?
 ImporterPrompt_separatorSummary                = Trennzeichen
 
+ImporterRaster_description = Rasterdaten.
+ImporterRaster_summary     = Raster: {0}
+
 ## refine
 ImporterRefine_latLabel     = Y/Hochwert/Breitengrad (Latitude)
 ImporterRefine_lonLabel     = X/Rechtswert/L\u00E4ngengrad (Longitude)
