#108: Raster data (http://github.com/Polymap4/polymap4-p4/issues/issue/108)
  - NEW: DownloadImporter
  - NEW: progress monitor during verify
  - ArchiveReader: support *.jar

--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -6,6 +6,9 @@ CrsPrompt_filterDescription = Performs a fulltext search in all known data.
 CrsPrompt_filterSummary     = Filter:
 CrsPrompt_summary           = Coordinate reference system
 
+Download_description = Download a file via HTTP or FTP
+Download_summary     = Download from remote site
+
 ## csv
 ImporterCsv_summary = CSV: {0}
 
