--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -9,6 +9,16 @@ CrsPrompt_summary           = Coordinate reference system
 Download_description = Download a file via HTTP or FTP
 Download_summary     = Download from remote site
 
+ImportPanel_fabTooltip     = Import data
+ImportPanel_forwardTooltip = Analyse and process the selected data
+ImportPanel_previewMsg     = No data to preview yet.\n\nPlease **upload** a file or choose one of the **service** importers.\n\nSupported **data** formats:\n\n  * CSV\n  * MS Excel\n  * Shapefile\n  * KML/KMZ\n  * GeoJSON\n\n**Raster** formats:\n\n  * GeoTiff\n  * ArcGrid\n  * any [GDAL supported](http://www.gdal.org/formats_list.html) format\n\nOr an **archive**:\n\n  * ZIP\n  * TAR, TGZ, GZ
+ImportPanel_previewNoData  = Analyzing data...\n\nResults are shown in the list above. Click an entry to get a preview.\n\n
+ImportPanel_previewTitle   = Data preview
+ImportPanel_title          = Import
+ImportPanel_tooltip        = Import new data into this project
+ImportPanel_upload         = Upload file...
+ImportPanel_uploadTooltip  = <b>Drop</b> files here<br/>or <b>click</b> to open file dialog
+
 ## csv
 ImporterCsv_summary = CSV: {0}
 
