--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages_de.properties
@@ -6,6 +6,12 @@ CrsPrompt_filterDescription = Volltextsuche in allen Daten.
 CrsPrompt_filterSummary     = Filter:
 CrsPrompt_summary           = Koordinatenreferenzsystem
 
+ImportPanel_previewNoData  = Daten werden analysiert...\n\nSobald Daten gefunden wurden werden diese in der Liste angezeigt. W\u00E4hlen Sie einen Eintrag aus der Liste f\u00FCr eine Vorschau.
+ImportPanel_previewTitle   = Vorschau
+ImportPanel_title          = Import
+ImportPanel_tooltip        = Neue Daten in dieses Projekt importieren
+ImportPanel_upload         = Dateien hochladen...
+
 ## excel
 ImporterExcel_sheet        = Arbeitsblatt [ {0} ] mit {1,number} Zeilen
 ImporterExcel_sheets       = Diese Microsoft Excel Datei enth\u00E4lt mehrere Arbeitsbl\u00E4tter. </br>Bitte w\u00E4hlen Sie das Arbeitsblatt die Sie importieren m\u00F6chten.
