importer first draft working

--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -72,6 +72,10 @@ ImporterShp_description = Common file format for spatial data.
 ## shp
 ImporterShp_summary     = Shapefile: {0}
 
+ImporterGpap_description = Geopaparazzi Survey Project.
+## shp
+ImporterGpap_summary     = Geopaparazzi project: {0}
+
 ##
 OwsMetadata_address            = Address
 OwsMetadata_administrativeArea = Administrative area
